--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,12 +1,27 @@
 % !TEX root = thesis.tex
 
-\chapter{Conclusion}
+\chapter{Conclusion}\label{ch:conclusion}
 
 
-\section{Coming back to the genitive}
+\section{Coming back to the genitive}\label{sec:genitive}
 
+In Gothic headless relatives, there is data available of the genitive in case competition with the accusative. The genitive wins in this competition.
+I give an example in which the internal case is accusative and the external case is genitive in \ref{ex:gothic-gen-acc}.
+The relative clause is marked in bold, the relative pronoun is not.
+The internal case is accusative. The predicate \tit{gasehvun} `saw' takes accusative objects.
+The external case is genitive. The noun \tit{waiht} `thing' combines with a genitive.
+The relative pronoun \tit{þiz(e)} `what.\ac{gen}' appears in the external case: the genitive.
 
-In Chapter \ref{ch:recurring} I briefly mentioned the genitive. Even though others \citep[cf.][]{harbert1978,pittner1995} have included the genitive in their discussion about headless relatives, I did not. My reason for that the genitive does not engage in case competition with all other possible cases in the three main languages under discussion: Gothic, Old High German and Modern German.
+\exg. ni waiht þiz \tbf{-ei} \tbf{gasehvun}\\
+ not thing\scsub{[gen]} what.\ac{gen} -\ac{comp} saw\scsub{[acc]}\\
+ `not any of (that) which they saw' \flushfill{Gothic, \ac{luke} 9:36, adapted from \pgcitealt{harbert1978}{340}}\label{ex:gothic-gen-acc}
+
+If the internal case is genitive and the external case is accusative, the genitive wins as well. Crucially, there are no attested examples in Gothic of genitives in case competition with nominatives or datives.
+
+The same holds for the two other main languages discussed in this thesis: Modern German and Old High German.
+In Modern German, case competitions have been reported between all possible case combinations, so also between genitives and nominatives, between genitives and accusatives, and between genitives and datives \citep[cf.][]{vogel2001}. The genitive wins over the nominative and the accusative. In a competition between the genitive and the dative neither of them gives a grammatical result.
+Old High German might show some examples of case competition between genitives and accusatives and genitives and nominative. In these cases, the genitive always wins. No examples of datives against genitives are attested \citep{behaghel1923}.
+In sum, the genitive does not appear in all possible case competition combinations in all three languages, and is therefore excluded.
 
 What do I predict for the genitive? Starke: S-acc --- S-dat --- gen --- B-acc --- B-dat
 
@@ -16,4 +31,4 @@ then the predictions would be..
 
 The genitive differs from the other cases in a particular way. That is, nominative, accusative and dative are dependents of the verb (or prepositions). Genitives can be dependents of verbs, or they can be dependents of nouns, as possessors or partitives. Consider the example in \ref{ex:gothic-gen-acc}. The genitive relative pronoun \tit{þiz(e)} `what.\tsc{gen}' is a dependent of the noun \tit{waiht} `thing'. Most of the examples in headless relatives contain genitives that depend on nouns and not those that depend on verbs. The (genitive) possessor is also placed far away from the other three cases in \posscitet{keenan1977} relativization hiearchy.
 
-I leave it for future research..     
+I leave it for future research..
