--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -169,6 +169,12 @@
   class = abbr
 }
 
+\DeclareAcronym{pres}{
+  short = \tsc{pres} ,
+  long  = present tense ,
+  class = abbr
+}
+
 
 \DeclareAcronym{ohg}{
   short = OHG ,
