--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -11,15 +11,15 @@ Then I show that this pattern is not unique to headless relatives. It appears in
 
 \section{Case competition in headless relatives}\label{sec:pattern-rels}
 
-As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It has been argued in the literature that the two competing cases always adhere to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This scale is given in \ref{ex:case-scale}. Elements more on the right on this scale win over elements more on the left of this scale.\footnote{
-I leave the genitive aside. In Section \ref{sec:genitive} I motivate why.
+As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
+In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. In Chapter \ref{ch:conclusion} I briefly return to the issue.
 }
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
 
 This can be reformulated as follows. In a competition, dative wins over accusative, and dative wins over nominative. Additionally, accusative wins over nominative. In this section I illustrate this scale with examples. When two cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case. I illustrate this with examples from headless relatives in Gothic \citep{harbert1978}.
 
-I start with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative. The examples are repeated from the introduction.
+I start with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative.
 
 Consider the example in \ref{ex:gothic-acc-dat-rep}, repeated from the introduction. In this example, the internal case is dative and the external case is accusative.
 The relative clause and the relative pronoun are marked in bold.
@@ -53,7 +53,7 @@ The relative pronoun \tit{þamm(a)} `who.\ac{dat}' appears in the internal case:
 Examples, in which the relative pronoun appears in nominative case, the internal case is dative and the external case is nominative, are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
- but who.\ac{dat} -\ac{comp} ittle {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
+ but who.\ac{dat} -\ac{comp} little {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
 
  Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
@@ -142,8 +142,7 @@ To sum up, case competition in headless relative is subject to the case scale, r
 If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern, Middle High and Old High German, \citealt{grosu2003} for Ancient Greek and \citealt{daskalaki2011} for Modern Greek).\footnote{
 These languages differ from Gothic in that they are subject to an additional constraint. That is, they only allow either the internal or the external case to win case competitions. If the other case is more to the right on the case scale \ref{ex:case-scale-rep}, the result is ungrammatical.
 Old High German is an example of a language that only allows the external case to win the case competition. If the internal case is more to the right on the case scale, the headless relative is ungrammatical. Modern German is an example of a language that only allows the internal case to win the case competition. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
-This topic is the main focus of Part \ref{part:complexity} of this dissertation.
-}
+This topic is the main focus of Part \ref{part:complexity} of this dissertation.}
 
 In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
 
@@ -189,19 +188,19 @@ Japanese is an example of a language that does not show any agreement on the pre
  Taro-\ac{nom} Hanako-\ac{dat} package-\ac{acc} sent\\
  `Taro sent Hanako a package.' \flushfill{Japanese, \pgcitealt{miyagawa2004}{5}}\label{ex:japanese-agr}
 
-German is an example of a language that can show agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}, marked in bold. This morpheme is the agreement morpheme for second person singular subjects. The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
+German is an example of a language that shows agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}, marked in bold. This morpheme is the agreement morpheme for second person singular subjects (in the present tense). The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
 
 \exg. Du gib \tbf{-st} mir das Buch.\\
- you give -2\ac{sg} me the book\\
+ you give -2\ac{sg}.\ac{pres} me the book\\
  `You give me the book.' \flushfill{German}\label{ex:german-agr}
 
-Hungarian is an example of a language that can show agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarian-agr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}, marked in bold. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'.
+Hungarian is an example of a language that shows agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarian-agr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}, marked in bold. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'. Agreement with the the first person singular subject \tit{én} `I' and second person singular indirect object \tit{neked} `you.\ac{dat}.\ac{sg}' is ungrammatical, as indicated by the ungrammaticality of \tit{-lak}.
 
-\exg. (Én) neked ad \tbf{-om} a könyv -et\\
- I you.\ac{dat}.\ac{sg} give -1\ac{sg}.\ac{subj}>3.\ac{obj} the book -\ac{acc}\\
+\exg. (Én) neked ad \tbf{-om}/ *-lak a könyv -et\\
+ I you.\ac{dat}.\ac{sg} give -1\ac{sg}.\ac{subj}>3.\ac{obj} -1\ac{sg}.\ac{subj}>2.\ac{obj} the book -\ac{acc}\\
  `I give you the book.' \flushfill{Hungarian, András Bárány p.c.}\label{ex:hungarian-agr}
 
-Basque is an example of language that can show agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basque-agr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}, marked in bold. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
+Basque is an example of a language that shows agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basque-agr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}, marked in bold. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
 
 \exg. Zu-k ni-ri liburu-a emon \tbf{d} -aus \tbf{-ta} \tbf{-zu}.\\
  you-\ac{erg} me-\ac{dat} book-\ac{def}.\ac{abs} given \ac{abs}.3\ac{sg} -\ac{aux} -\ac{dat}.1\ac{sg} -\ac{erg}.2\ac{sg}\\
@@ -310,11 +309,11 @@ In conclusion, agreement follows the same implicational hierarchy as the case sc
 
 \subsection{Relativization}
 
-Relativization refers to the process in which a relative clause is derived from a non-relative clause. An example of the non-relative clause is given in \ref{ex:rel-non}. The relative clause derived from that is shown in \ref{ex:rel-realati}. The head of the relative clause is \tit{the woman} and precedes the clause. The optional relative pronoun follows the head. The head of the head does not appear in the relative clause anymore.
+Relativization refers to the process in which a relative clause is derived from a non-relative clause. An example of the non-relative clause is given in \ref{ex:rel-non}. The relative clause derived from that is shown in \ref{ex:rel-realati}. The head of the relative clause is \tit{woman} and precedes the clause. The relative pronoun follows the head. The head of the head does not appear in the relative clause anymore.
 
 \ex.
 \a. You like the woman. \label{ex:rel-non}
-\b. \tbf{the} \tbf{woman}, (who) you like \label{ex:rel-realati}
+\b. \tbf{the} \tbf{woman}, who you like \label{ex:rel-realati}
 
 In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differs per language which elements can be relativized with a particular strategy. Just like the distribution was not random for agreement, it is not random which elements can be relativized. Instead, there is an implicational hierarchy that is identical to the one observed for the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
 
@@ -363,23 +362,23 @@ The object of \ref{ex:malagasy-decl} cannot be relativized in the same way, as s
  `the woman that the student saw' \flushfill{Malagasy, \pgcitealt{keenan1977}{70}, my boldfacing}\label{ex:malagasy-no-do}
 
 Later in this section I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative \citep[after][]{caha2009}. As Malagasy does not have any overt morphological system, it does not hold that the subject corresponds to the nominative in this case.
-German is another example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect object. This strategy is the participle construction \citep{keenan1977}. \ref{ex:german-rel-decl} is an example of a declarative sentence in German. It is a transitive sentence that contains the subject \tit{die Frau} `the woman' and the object \tit{der Mann} `the man'.
+German is another example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect object. This strategy is the participle construction \citep{keenan1977}. This strategy is a secondary strategy that exist besides the main strategy that can be used to relativize direct and indirect objects. \ref{ex:german-rel-decl} is an example of a declarative sentence in German. It is a transitive sentence that contains the subject \tit{die Frau} `the woman' and the object \tit{der Mann} `the man'.
 
 \exg. Die Frau küsst den Mann.\\
 the woman kisses the man\\
 `The woman is kissing the man.' \flushfill{German}\label{ex:german-rel-decl}
 
-In \ref{ex:german-rel-subj}, the subject from the declarative sentence \tit{die Frau} `the woman', marked in bold, is relativized. The predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{den Mann küssende} `the man kissing'. The relative clause directly precedes the noun of the subject, creating distance between the determiner \tit{die} `the' and \tit{Frau} `woman'.
+The subject from the declarative in \ref{ex:german-rel-decl}, sentence \tit{die Frau} `the woman', is relativized in \ref{ex:german-rel-subj}. The predicate from the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the reduced relative clause \tit{den Mann küssende} `the man kissing'. The reduced relative clause directly precedes the noun of the subject, creating distance between the determiner \tit{die} `the' and \tit{Frau} `woman', which are both marked in bold.
 
 \exg. \tbf{die} den Mann küssende \tbf{Frau}\\
  the the man kissing woman\\
  `the woman who is kissing the man' \flushfill{German}\label{ex:german-rel-subj}
 
-The object of \ref{ex:german-rel-decl} \tit{den Man} `the man', marked in bold, cannot be relativized in the same way, as shown in \ref{ex:german-rel-no-do}. Again, the predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{die Frau küssende} `the woman kissing'. The relative clause directly precedes the noun of the object, creating distance between the determiner \tit{der} `the' and \tit{Mann} `man'. This example is ungrammatical.
+The object from the declarative sentence in \ref{ex:german-rel-decl}, \tit{den Mann} `the man', cannot be relativized like the subject, as shown in \ref{ex:german-rel-no-do}. Again, the predicate from the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{die Frau küssende} `the woman kissing'. The reduced relative clause directly precedes the noun of the object, creating distance between the determiner \tit{der} `the' and \tit{Mann} `man', which are both marked in bold. This example is ungrammatical.
 
 \exg. *\tbf{den} die Frau küssende \tbf{Mann}\\
  the the woman kissing man\\
- `the man that the woman is kissing' \flushfill{German}\label{ex:german-rel-no-do}
+ intended: `the man that the woman is kissing' \flushfill{German}\label{ex:german-rel-no-do}
 
 Malay is an example of a language that has a relativization strategy for subjects and direct objects, but not for indirect objects. \ref{ex:malay-do} shows an example in which the object is relativized. The object here is \tit{ayam} `chicken', marked in bold. It is followed by the relativizer \tit{yang} `that'. After that, the rest of the relative clause \tit{Aminah sedang memakan} `Aminah is eating' follows. The same strategy works to relativize subjects, which is not illustrated with an example.
 
@@ -442,12 +441,12 @@ In this section, I show that this same case scale also shows up in morphology. F
 
 \subsection{Syncretism}
 
-Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I show that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \ac{nom} < \ac{acc} < \ac{dat}.
+Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I discuss literature that shows that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \ac{nom} < \ac{acc} < \ac{dat}.
 
-It has widely been established that syncretism is restricted by the linear sequence \ac{nom} --- \ac{acc} --- \ac{dat} \citep{baerman2005,caha2009,zompi2017} (and see \citealt{mcfadden2018,smith2019} for similar claims concerning root suppletion). That is, if one orders cases in this linear sequence, only contiguous regions in the sequence can be syncretic.
+It has widely been observed that syncretism is restricted by the linear sequence \ac{nom} --- \ac{acc} --- \ac{dat} \citep{baerman2005,caha2009,zompi2017} (and see \citealt{mcfadden2018,smith2019} for similar claims concerning root suppletion). That is, if one orders cases in this linear sequence, only contiguous regions in the sequence turn out to be syncretic.
 Following that, four possible patterns are attested crosslinguistically. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
 
-There is one pattern that does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. This pattern is not attested crosslinguistically. In other words, there is no ABA pattern (in which a form B intervenes between the two identically formed As) \citep{bobaljik2012}.
+There is one pattern that is not attested crosslinguistically. This pattern does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. In other words, there is no ABA pattern (in which a form B intervenes between the two identically formed As) \citep{bobaljik2012}.
 
 Table \ref{tbl:syncretisms} shows examples for each of these possible patterns. I give an example from a syncretism between nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\ac{pl}' is syncretic between nominative, accusative and dative.
 I give an example from a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
@@ -539,29 +538,6 @@ The third person singular and first person plural show the same pattern. The acc
 Other languages that show this phenomenon are West Tocharian \citep{gippert1987} and Vlakh and Kalderaš Romani (respectively \citealt{friedman1991} and \citealt{boretzky1994}).
 
 In sum, some languages morphologically look like \ac{nom}-\ac{acc}-\ac{dat}. This exactly reflects the case scale \ac{nom} < \ac{acc} < \ac{dat}.
-
-
-\section{Excluding the genitive}\label{sec:genitive}
-
-In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded.
-
-In Gothic headless relatives, there is data available of the genitive in case competition with the accusative. The genitive wins in this competition.
-I give an example in which the internal case is accusative and the external case is genitive in \ref{ex:gothic-gen-acc}.
-The relative clause is marked in bold, the relative pronoun is not.
-The internal case is accusative. The predicate \tit{gasehvun} `saw' takes accusative objects.
-The external case is genitive. The noun \tit{waiht} `thing' combines with a genitive.
-The relative pronoun \tit{þiz(e)} `what.\ac{gen}' appears in the external case: the genitive.
-
-\exg. ni waiht þiz \tbf{-ei} \tbf{gasehvun}\\
- not thing\scsub{[gen]} what.\ac{gen} -\ac{comp} saw\scsub{[acc]}\\
- `not any of (that) which they saw' \flushfill{Gothic, \ac{luke} 9:36, adapted from \pgcitealt{harbert1978}{340}}\label{ex:gothic-gen-acc}
-
-If the internal case is genitive and the external case is accusative, the genitive wins as well. Crucially, there are no attested examples in Gothic of genitives in case competition with nominatives or datives.
-
-The same holds for the two other main languages discussed in this thesis: Modern German and Old High German.
-In Modern German, case competitions have been reported between all possible case combinations, so also between genitives and nominatives, between genitives and accusatives, and between genitives and datives \citep[cf.][]{vogel2001}. The genitive wins over the nominative and the accusative. In a competition between the genitive and the dative neither of them gives a grammatical result.
-Old High German might show some examples of case competition between genitives and accusatives and genitives and nominative. In these cases, the genitive always wins. No examples of datives against genitives are attested \citep{behaghel1923}.
-In sum, the genitive does not appear in all possible case competition combinations in all three languages, and is therefore excluded.
 
 \section{Summary}
 
