--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@ This dissertation is about case competition, a situation in which two cases are 
 
 I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. I let this follow from what we observe in morphology. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
 
-This phenomenon has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that the phenomenon is actually more wide-spread than what has been assumed.
+Case competition in headless relatives has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that case competition in headless relatives is actually more wide-spread than what has been assumed.
 %%this is too difficult
 
 In this introduction I first introduce what I mean exactly with case competition in headless relatives. Then I introduce the topics I discuss in this dissertation.
@@ -16,7 +16,7 @@ In this introduction I first introduce what I mean exactly with case competition
 
 % First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
-Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. What can descriptively be called subjects of the predicate \tit{mag} `likes' are marked as nominative. What can be described as objects of \tit{mag} `likes' are marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
+Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. The what can descriptively be called subject of the predicate \tit{mag} `likes' is marked as nominative. The what can be described as object of \tit{mag} `likes' is marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
 In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mag} `likes'.
 In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the descriptive object of \tit{mag} `likes'.
 
@@ -26,10 +26,10 @@ In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit
  `The teacher likes the pupil.'\label{ex:german-case-1}
 \bg. Der Schüler mag den Lehrer.\\
  the.\ac{nom} student likes the.\ac{acc}\\
- `the pupil likes the teacher.'\label{ex:german-case-2}
+ `The pupil likes the teacher.'\label{ex:german-case-2}
 
-Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain of a main clause that is modified by a relative clause.
-In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the descriptive subject of in the relative clause.
+Not only full noun phrases, but also other elements can be marked for case, such as relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain a main clause that is modified by a relative clause.
+In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the descriptive subject of in the relative clause.
 
 In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' appears in accusative case, because it is the descriptive object of \tit{sucht} `searches' in the relative clause.
 
@@ -37,11 +37,11 @@ In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspi
 \ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
  the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{nom} to outside looks\\
  `The teacher likes the pupil that is looking outside.'\label{ex:german-relative-1}
- \bg. Der Lehrer mag den Schüler, den er beim Verstecktspiel sucht.\\
+ \bg. Der Lehrer mag den Schüler, den er beim Versteckspiel sucht.\\
  the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he {at the} {hide-and-seek game} searches\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:german-relative-2}
 
-Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the descriptive object in the main clause. The case of the relative pronoun in \ref{ex:german-relative-2} is also accusative, because of it is the descriptive object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is nominative, because it is the descriptive subject in the relative clause. So, the case of the relative pronoun in \ref{ex:german-relative-1} differs from the case of the head.
+Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the descriptive object in the main clause. The case of the relative pronoun in \ref{ex:german-relative-2} is also accusative, because it is the descriptive object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is nominative, because it is the descriptive subject in the relative clause. So, the case of the relative pronoun in \ref{ex:german-relative-1} differs from the case of the head.
 
 The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
 This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
@@ -63,7 +63,7 @@ Internal case refers to the case associated with the relative pronoun internal t
 External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the descriptive object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothic-acc-acc}, the external case is accusative.
 
 Now I return to the question where \tit{þan(a)} in \ref{ex:gothic-acc-acc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
-This is easy to imagine for the internal case: the internal case reflects the grammatical role of the relative clause. It is a bit more complicated for the external case. The external case is associated with the grammatical role of the missing head in the main clause. The idea is going to be that the external case cannot be reflected a non-existing head. Indirectly, it appears on the relative pronoun.\footnote{
+This is easy to imagine for the internal case: the internal case reflects the grammatical role of the relative clause. It is a bit more complicated for the external case. The external case is associated with the grammatical role of the missing head in the main clause. The idea is going to be that the external case cannot be reflected on a non-existing head. Indirectly, it appears on the relative pronoun.\footnote{
 Later on I will argue that this indirect process is ellipsis.
 }
 This means that the internal and external case come together on the relative pronoun. In other words, there is case competition going on in headless relatives. \ref{ex:gothic-acc-acc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
@@ -96,7 +96,7 @@ In the next section, I discuss the content of this dissertation. Before that, I 
 For \tit{ushafjands} `picking up' \ref{ex:gothic-acc-acc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothic-dat-acc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothic-acc-dat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case the descriptive subject appears in, of which examples will emerge in the next chapter.
 In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 
-Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it in gray as well, as shown in \ref{ex:gothic-acc-dat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-dat-acc}. When the internal and external case are the same, the relative pronoun should be black and gray. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothic-acc-acc}.
+Second, I write the relative clause in bold. When the relative pronoun takes the internal case, I mark it in bold as well, as shown in \ref{ex:gothic-acc-dat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-dat-acc}. When the internal and external case are the same, the relative pronoun should be black and bold. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothic-acc-acc}.
 
 
 \section{The content of this dissertation}
