Auto stash before merge of "master" and "origin/master"

--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -2,19 +2,21 @@
 
 \chapter{Case decomposition meets ellipsis}
 
-The problem: so far people that account for headless relatives have made reference to this case hierarchy. they put them in their OT tables, let the fly in from the left in their syntax, whatever. What I want to do is unify all the instances of nom-acc-dat. I put nom-acc-dat in syntax. which is morphology.
+At the beginning of the previous chapter I discussed the case scale active in headless relatives: \tsc{nom < acc < dat}. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy.
 
+``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.'' \pgcitep{pittner1995}{201} (footnote 4)
 
-\section{Problem with previous analyses of headless relatives}
+What I showed as well in the previous chapter is the pattern \tsc{nom < acc < dat} is reccurring. It can be observed in at least two more syntactic phenomena: agreement en relativization.\footnote{
+In this dissertation I do not work out an account, but I only used this as an illustration that the pattern in reflected in syntax.}
+We also see it in morphology with syncretism patterns and formal containment. Morphology was also mentioned by Pittner.
 
+``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.'' \pgcitep{pittner1995}{201} (footnote 4)
 
+Do we have an abstract hierarchy that we make reference to time and time again? In an ideal analysis, the hierarchy exists once and all the other occurrences are reflexes of the first one. That also means we want morphology and syntax be connected.
 
-The problem: so far people that account for headless relatives have made reference to this case hierachy. they put them in their OT tables, let the fly in from the left in their syntax, whatever.
+That's exactly what I'm going to propose. (this intuition has been worked out in a different way in Himmelreich's dissertation.)
 
-What I do is start is start from morphology. There we have complex case: dat - acc - nom.
-What we see in syntax is a by-product of the morphology, it´s a consequence, it´s an indirect relation. cause and effect
-if the morphology is different, than so will the syntax
-
+First I show where the case hierarchy is, which is in morphology, with actual structural containment: \tsc{[[[nom]acc]dat]}. What we see in syntax is a by-product of the morphology, it's a consequence, it's an indirect relation. cause and effect
 
 
 \section{Morphology}
