naar berlijn gestuurd

--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -9,7 +9,7 @@ This chapter introduces the pattern that forms the focus of the first part of th
 Then I show that this pattern is not unique to headless relatives. It appears in more syntactic and morphological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the same case ordering. The hierarchies concern agreement and relativization across languages. Section \ref{sec:case-morphology} shows that the case scale also shows up in morphological patterns. It can be observed in patterns of syncretism and in morphological containment.
 
 
-\section{Case competition in headless relatives}\label{sec:pattern-rels}
+\section{In headless relatives}\label{sec:pattern-rels}
 
 As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
 In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. In Chapter \ref{ch:conclusion} I briefly return to the issue.
@@ -147,7 +147,7 @@ This topic is the main focus of Part \ref{part:complexity} of this dissertation.
 In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
 
 
-\section{Two implicational hierarchies}\label{sec:impl-hier}
+\section{In syntax}\label{sec:impl-hier}
 
 In this section I discuss two additional syntactic phenomena that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. The first one is an implicational hierarchy that concerns agreement. The second one is an implicational hierarchy about relativization.
 
@@ -432,7 +432,7 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
 \citet{caha2009} restates the implicational hierarchy in terms of case. Subject corresponds to nominative, direct object corresponds to accusative, and indirect object corresponds to dative. Again, the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed.
 
 
-\section{Case in morphology}\label{sec:case-morphology}
+\section{In morphology}\label{sec:case-morphology}
 
 In the two previous sections I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. First, it shows up in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the identical implicational holds for relativization strategies cross-linguistically.
 
